--- a/index.html
+++ b/index.html
@@ -336,16 +336,38 @@
 
       <footer>
         <div class="ink-grid">
-            <nav class="ink-navigation push-left medium-150 small-100 small-push-left">
+            <div class="push-left large-50 medium-150 small-100 small-push-left">
+                <!-- Begin MailChimp Signup Form -->
+                <!-- Begin MailChimp Signup Form -->
+                <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+                <style type="text/css">
+                  #mc_embed_signup{}
+                  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                </style>
+                <div id="mc_embed_signup">
+                <form action="http://sinfo.us8.list-manage.com/subscribe/post?u=de57247db0922adf365af7eef&amp;id=cbc6013242" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="ink-form validate" target="_blank" novalidate>
+                  <label for="mce-EMAIL">Subscribe to our newsletter</label>
+                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_de57247db0922adf365af7eef_cbc6013242" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </form>
+                </div>
+
+                <!--End mc_embed_signup-->
+                <!--End mc_embed_signup-->
+            </div>
+            <nav class="ink-navigation push-right medium-150 small-100 small-push-right">
                 <ul class="menu horizontal">
                   <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="fa fa-facebook"></i></a>
                   <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
                   <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="fa fa-youtube"></i></a>
                   <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a>
                   <a class="social-icon" target="_blank" href="mailto:geral@sinfo.org"><i class="fa fa-envelope"></i></a>
+                  <a href="http://tecnico.pt" target="_blank"><img src="img/logoist.png"></a>
                 </ul>
             </nav>
-            <p class="push-right small-100"><a href="http://tecnico.pt" target="_blank"><img src="img/logoist.png"></a></p>
         </div>
         </footer>
     </body>
