--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li>
               <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logotext.png"></a>
             </li>
+            <li><a href="#news">News</a></li>
             <li><a href="#speakers">Speakers</a></li>
             <li><a href="#workshops">Workshops</a></li>
             <li><a href="#sponsors">Sponsor us!</a></li>
@@ -53,6 +54,7 @@
           </ul>
 
           <ul class="menu vertical flat black hide-all" id="topbar_menu">
+            <li><a href="#news">News</a></li>
             <li><a href="#speakers">Speakers</a></li>
             <li><a href="#workshops">Workshops</a></li>
             <li><a href="#sponsors">Sponsor us!</a></li>
@@ -102,6 +104,54 @@
           </div>
         </div>
       </div>
+
+      <div class="news" id="news">
+        <div class="opacidade">
+          <h1><a href="#news" title="news">Keep updated!</a></h1>
+          <div class="description">
+            SINFO organizes and collaborates in dozens of events throughout the year. 
+            <br>Subscribe and make sure not to lose any of it!
+          </div>
+        </div>
+      </div>
+
+      <div class="ink-grid text-section">
+        <div class="column-group gutters">
+          <div class="large-100 medium-100 small-100 justify-text">
+            <h1>Latest news</h1>   
+          </div>       
+        </div>
+        <div class="column-group gutters">
+          <div class="large-60 medium-50 small-100 justify-text">
+            <h3>Come with SINFO to ENEI 2014</h3>
+            <p class="note">April 1st, 2014</p>
+            <p>Come with us to Encontro Nacional de Estudantes de Informática 2014 which will happen in Aveiro on April 10-14. <br>
+            Find out more here: <a href="https://www.facebook.com/events/274251866068428/">https://www.facebook.com/events/274251866068428/</a>.</p>
+          </div>
+          <div class="large-40 medium-50 small-100 justify-text">
+            <!-- Begin MailChimp Signup Form -->
+            <div id="mc_embed_signup">
+            <form action="http://sinfo.us8.list-manage.com/subscribe/post?u=de57247db0922adf365af7eef&amp;id=cbc6013242" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="ink-form validate" target="_blank" novalidate>
+              <h3>Subscribe to our newsletter</h3>
+              <div class="control-group">
+                <div class="column-group gutters">
+                  <div class="control large-90 append-button">
+                    <span>
+                      <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                    </span>
+                    <button value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="ink-button">Subscribe</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+            </div>
+            <!--End mc_embed_signup-->
+            <!--<i class="icon-envelope-alt big-mail"></i>-->
+
+          </div>
+        </div>
+      </div>
+
 
       <div class="speakers" id="speakers">
         <div class="opacidade">
@@ -337,26 +387,7 @@
       <footer>
         <div class="ink-grid">
             <div class="push-left large-50 medium-150 small-100 small-push-left">
-                <!-- Begin MailChimp Signup Form -->
-                <!-- Begin MailChimp Signup Form -->
-                <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-                <style type="text/css">
-                  #mc_embed_signup{}
-                  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                </style>
-                <div id="mc_embed_signup">
-                <form action="http://sinfo.us8.list-manage.com/subscribe/post?u=de57247db0922adf365af7eef&amp;id=cbc6013242" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="ink-form validate" target="_blank" novalidate>
-                  <label for="mce-EMAIL">Subscribe to our newsletter</label>
-                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_de57247db0922adf365af7eef_cbc6013242" value=""></div>
-                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                </form>
-                </div>
-
-                <!--End mc_embed_signup-->
-                <!--End mc_embed_signup-->
+                  <a href="http://tecnico.pt" target="_blank"><img src="img/logoist.png"></a>
             </div>
             <nav class="ink-navigation push-right medium-150 small-100 small-push-right">
                 <ul class="menu horizontal">
@@ -365,7 +396,6 @@
                   <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="fa fa-youtube"></i></a>
                   <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a>
                   <a class="social-icon" target="_blank" href="mailto:geral@sinfo.org"><i class="fa fa-envelope"></i></a>
-                  <a href="http://tecnico.pt" target="_blank"><img src="img/logoist.png"></a>
                 </ul>
             </nav>
         </div>
