--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <h3>Come with SINFO to ENEI 2014</h3>
             <p class="note">April 1st, 2014</p>
             <p>Come with us to Encontro Nacional de Estudantes de Informática 2014 which will happen in Aveiro on April 10-14. <br>
-            Find out more here: <a href="https://www.facebook.com/events/274251866068428/">https://www.facebook.com/events/274251866068428/</a>.</p>
+            Find out more here: <br><a href="https://www.facebook.com/events/274251866068428/">https://www.facebook.com/events/274251866068428/</a>.</p>
           </div>
           <div class="large-40 medium-50 small-100 justify-text">
             <!-- Begin MailChimp Signup Form -->
