--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-        <link rel="shortcut icon" href="img/favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/vendor/ink/ink.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+  
 
         <!--[if IE 7 ]>
             <link rel="stylesheet" href="css/vendor/ink/ink-ie7.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -123,8 +126,8 @@
         </div>
         <div class="column-group gutters">
           <div class="large-60 medium-50 small-100 justify-text">
+            <span class="note">March 30th, 2014</span>
             <h3>Come with SINFO to ENEI 2014</h3>
-            <p class="note">April 1st, 2014</p>
             <p>Come with us to Encontro Nacional de Estudantes de Informática 2014. <br>It will happen in Aveiro on April 10-14.
             Find out more here: <br><a href="https://www.facebook.com/events/274251866068428/">https://www.facebook.com/events/274251866068428/</a></p>
           </div>
