--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="opacidade">
           <h1><a href="#" title=""><img src="img/logo.png"></a></h1>
         <div class="description">
-            SINFO is an annual event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
+            SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
             <br><br>
             <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="fa fa-facebook"></i></a>
             <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
