--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>
             SINFO
         </title>
-        <meta name="description" content="">
-        <meta name="author" content="ink, cookbook, recipes">
+        <meta name="description" content="SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.">
+        <meta name="author" content="SINFO">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -18,6 +18,8 @@
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   
+        <meta property="og:url" content="http://sinfo.org/" />
+        <meta property="og:image" content="http://sinfo.github.io/img/logo.png" />
 
         <!--[if IE 7 ]>
             <link rel="stylesheet" href="css/vendor/ink/ink-ie7.css" type="text/css" media="screen" title="no title" charset="utf-8">
