--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   
-        <meta property="og:url" content="http://sinfo.org/" />
+        <meta property="og:url" content="http://sinfo.github.io/" />
         <meta property="og:image" content="http://sinfo.github.io/img/logo.png" />
 
         <!--[if IE 7 ]>
