--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   
+        <meta property="og:title" content="SINFO" />
         <meta property="og:url" content="http://sinfo.github.io/" />
-        <meta property="og:image" content="http://sinfo.github.io/img/logo.png" />
+        <meta property="og:image" content="http://sinfo.github.io/img/sinfocheio.jpg" />
+        <meta property="og:description" content="SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition." />
 
         <!--[if IE 7 ]>
             <link rel="stylesheet" href="css/vendor/ink/ink-ie7.css" type="text/css" media="screen" title="no title" charset="utf-8">
