--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
             <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="fa fa-youtube"></i></a>
             <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a></div>
+            <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="fa fa-github"></i></a>
         </div>
       </div>
 
@@ -402,6 +403,7 @@
                   <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
                   <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="fa fa-youtube"></i></a>
                   <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a>
+                  <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="fa fa-github"></i></a>
                   <a class="social-icon" target="_blank" href="mailto:geral@sinfo.org"><i class="fa fa-envelope"></i></a>
                 </ul>
             </nav>
