--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
       <div class="header kindaParallax" id="header">
         <div class="opacidade">
           <h1><a href="#" title=""><img src="img/logo.png"></a></h1>
-        <div class="description">
+          <div class="description">
             SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
             <br><br>
             <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="fa fa-facebook"></i></a>
             <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
             <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="fa fa-youtube"></i></a>
-            <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a></div>
+            <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a>
             <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="fa fa-github"></i></a>
+          </div>
         </div>
       </div>
 
