--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         <script type="text/javascript" src="js/vendor/ink/ink-ui.min.js"></script>
         <script type="text/javascript" src="js/vendor/ink/autoload.js"></script>
         <script type="text/javascript" src="js/vendor/ink/html5shiv.js"></script>
-
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     </head>
 
     <body>
@@ -76,11 +74,11 @@
           <div class="description">
             SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
             <br><br>
-            <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="fa fa-facebook"></i></a>
-            <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
-            <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="fa fa-youtube"></i></a>
-            <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a>
-            <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="fa fa-github"></i></a>
+            <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon icon-facebook"></i></a>
+            <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon icon-twitter"></i></a>
+            <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="social-icon icon-youtube"></i></a>
+            <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="social-icon icon-instagram"></i></a>
+            <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="social-icon icon-github"></i></a>
           </div>
         </div>
       </div>
@@ -400,12 +398,12 @@
             </div>
             <nav class="ink-navigation push-right medium-150 small-100 small-push-right">
                 <ul class="menu horizontal">
-                  <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="fa fa-facebook"></i></a>
-                  <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
-                  <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="fa fa-youtube"></i></a>
-                  <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a>
-                  <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="fa fa-github"></i></a>
-                  <a class="social-icon" target="_blank" href="mailto:geral@sinfo.org"><i class="fa fa-envelope"></i></a>
+                  <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon icon-facebook"></i></a>
+                  <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon icon-twitter"></i></a>
+                  <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="social-icon icon-youtube"></i></a>
+                  <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="social-icon icon-instagram"></i></a>
+                  <a class="social-icon" target="_blank" href="http://github.com/sinfo"><i class="social-icon icon-github"></i></a>
+                  <a class="social-icon" target="_blank" href="mailto:geral@sinfo.org"><i class="social-icon icon-envelope"></i></a>
                 </ul>
             </nav>
         </div>
