--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="column-group gutters">
           <div class="large-20 medium-20 small-100">
             <h6>Richard Stallman</h6>
-            <a href="" target="_blank"><img src="img/speakers/stallman.jpg" alt=""></a>
+            <img src="img/speakers/stallman.jpg" alt="">
             <p class="note">Founder of GNU and the Free Software Foundation</p>
           </div>
           <div class="large-20 medium-20 small-100">
