--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         <div class="column-group gutters">
           <div class="large-100 medium-100 small-100">
             <h2>Speakers from previous editions</h2>
+            <span class="note">Click on the pictures to watch the talk on YouTube</span>
           </div>
         </div>
         <div class="column-group gutters">
