--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <span class="note">March 30th, 2014</span>
             <h3>Come with SINFO to ENEI 2014</h3>
             <p>Come with us to Encontro Nacional de Estudantes de Informática 2014. <br>It will happen in Aveiro on April 10-14.
-            Find out more <br><a href="https://www.facebook.com/events/274251866068428/">here</a>.</p>
+            Find out more <a href="https://www.facebook.com/events/274251866068428/">here</a>.</p>
           </div>
           <div class="large-40 medium-50 small-100 justify-text">
             <!-- Begin MailChimp Signup Form -->
