--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Pedro Saraiva</h6>
-            <img src="img/team/pedro_saraiva.jpg" onmouseover="this.src='img/team/pedro_saraiva_sinfo.jpg'" onmouseout="this.src='img/team/pedro_saraiva.png'" alt="">
+            <img src="img/team/pedro_saraiva.jpg" onmouseover="this.src='img/team/pedro_saraiva_sinfo.jpg'" onmouseout="this.src='img/team/pedro_saraiva.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Rafael Santos</h6>
