--- a/index.html
+++ b/index.html
@@ -180,54 +180,54 @@
         <div class="column-group gutters">
           <div class="large-20 medium-20 small-100">
             <h6>Richard Stallman</h6>
-            <img src="img/speakers/stallman.jpg" alt="">
+            <img src="img/speakers/stallman.jpg" onmouseover="this.src='img/speakers/back/stallman.png'" onmouseout="this.src='img/speakers/stallman.jpg'" alt="">
             <p class="note">Founder of GNU and the Free Software Foundation</p>
           </div>
           <div class="large-20 medium-20 small-100">
             <h6>Joel Spolsky</h6>
-            <a href="https://www.youtube.com/watch?v=tamF4p04bfk" target="_blank"><img src="img/speakers/spolsky.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=tamF4p04bfk" target="_blank"><img src="img/speakers/spolsky.jpg" onmouseover="this.src='img/speakers/back/spolsky.png'" onmouseout="this.src='img/speakers/spolsky.jpg'" alt=""></a>
             <p class="note">Founder of Fog Creek Software and creator of Stack Overflow</p>
           </div>
           <div class="large-20 medium-20 small-100">
             <h6>Ray Muzyka</h6>
-            <a href="https://www.youtube.com/watch?v=igjfrbmCDlk" target="_blank"><img src="img/speakers/muzyka.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=igjfrbmCDlk" target="_blank"><img src="img/speakers/muzyka.jpg" onmouseover="this.src='img/speakers/back/muzyka.png'" onmouseout="this.src='img/speakers/muzyka.jpg'" alt=""></a>
             <p class="note">Founder of BioWare and its former CEO</p>
           </div>
           <div class="large-20 medium-20 small-100">
             <h6>Trina Gregory</h6>
-            <a href="https://www.youtube.com/watch?v=tTFivPrCXQs" target="_blank"><img src="img/speakers/tgregory.png" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=tTFivPrCXQs" target="_blank"><img src="img/speakers/tgregory.png" onmouseover="this.src='img/speakers/back/trina.png'" onmouseout="this.src='img/speakers/tgregory.jpg'" alt=""></a>
             <p class="note">Senior Lecturer at University of Southern California</p>
           </div>
           <div class="large-20 medium-20 small-100">
             <h6>Rick Falkvinge</h6>
-            <a href="https://www.youtube.com/watch?v=5dTREZNbljY" target="_blank"><img src="img/speakers/falkvinge.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=5dTREZNbljY" target="_blank"><img src="img/speakers/falkvinge.jpg" onmouseover="this.src='img/speakers/back/falkvinge.png'" onmouseout="this.src='img/speakers/falkvinge.jpg'" alt=""></a>
             <p class="note">Founder and first party leader of the Swedish Pirate Party.</p>
           </div>
         </div>
           <div class="column-group gutters">
             <div class="large-20 medium-20 small-100">
               <h6>Jason Gregory</h6>
-              <a href="https://www.youtube.com/watch?v=f8XdvIO8JxE" target="_blank"><img src="img/speakers/gregory.jpg" alt=""></a>
+              <a href="https://www.youtube.com/watch?v=f8XdvIO8JxE" target="_blank"><img src="img/speakers/gregory.jpg" onmouseover="this.src='img/speakers/back/jason.png'" onmouseout="this.src='img/speakers/gregory.jpg'" alt=""></a>
               <p class="note">Lead programmer at Naugthy Dog</p>
             </div>
             <div class="large-20 medium-20 small-100">
               <h6>Rasmus Lerdorf</h6>
-              <a href="https://www.youtube.com/watch?v=mMo00KHm8BA" target="_blank"><img src="img/speakers/lerdorf.jpg" alt=""></a>
+              <a href="https://www.youtube.com/watch?v=mMo00KHm8BA" target="_blank"><img src="img/speakers/lerdorf.jpg" onmouseover="this.src='img/speakers/back/lerdorf.png'" onmouseout="this.src='img/speakers/lerdorf.jpg'" alt=""></a>
               <p class="note">Creator of PHP scripting language</p>
             </div>
             <div class="large-20 medium-20 small-100">
               <h6>Alan Shaw</h6>
-              <a href="https://www.youtube.com/watch?v=HxMOyFLamCs" target="_blank"><img src="img/speakers/shaw.jpg" alt=""></a>
+              <a href="https://www.youtube.com/watch?v=HxMOyFLamCs" target="_blank"><img src="img/speakers/shaw.jpg" onmouseover="this.src='img/speakers/back/alanshaw.png'" onmouseout="this.src='img/speakers/shaw.jpg'" alt=""></a>
               <p class="note">Co-Founder of the Meteor London meetup group</p>
             </div>
             <div class="large-20 medium-20 small-100">
               <h6>Adam DuVander</h6>
-              <a href="https://www.youtube.com/watch?v=u6Bp2aO5xb4" target="_blank"><img src="img/speakers/duvander.jpg" alt=""></a>
+              <a href="https://www.youtube.com/watch?v=u6Bp2aO5xb4" target="_blank"><img src="img/speakers/duvander.jpg" onmouseover="this.src='img/speakers/back/duvander.png'" onmouseout="this.src='img/speakers/duvander.jpg'" alt=""></a>
               <p class="note">Developer Communications Director at SendGrid</p>
             </div>
             <div class="large-20 medium-20 small-100">
               <h6>Afonso Salcedo</h6>
-              <a href="https://www.youtube.com/watch?v=QBiR0itBXpk" target="_blank"><img src="img/speakers/salcedo.jpg" alt=""></a>
+              <a href="https://www.youtube.com/watch?v=QBiR0itBXpk" target="_blank"><img src="img/speakers/salcedo.jpg" onmouseover="this.src='img/speakers/back/salcedo.png'" onmouseout="this.src='img/speakers/salcedo.jpg'" alt=""></a>
               <p class="note">Founder of Sutro Studios. Former Pixar and Dreamworks</p>
             </div>
           </div>
