--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </div>
           <div class="large-20 medium-20 small-100">
             <h6>Trina Gregory</h6>
-            <a href="https://www.youtube.com/watch?v=tTFivPrCXQs" target="_blank"><img src="img/speakers/tgregory.png" onmouseover="this.src='img/speakers/back/trina.png'" onmouseout="this.src='img/speakers/tgregory.jpg'" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=tTFivPrCXQs" target="_blank"><img src="img/speakers/tgregory.png" onmouseover="this.src='img/speakers/back/trina.png'" onmouseout="this.src='img/speakers/tgregory.png'" alt=""></a>
             <p class="note">Senior Lecturer at University of Southern California</p>
           </div>
           <div class="large-20 medium-20 small-100">
