--- a/index.html
+++ b/index.html
@@ -387,6 +387,39 @@
             <h6>Rodrigo Martins</h6>
             <img src="img/team/rodrigo_martins.jpg" onmouseover="this.src='img/team/rodrigo_martins_sinfo.jpg'" onmouseout="this.src='img/team/rodrigo_martins.jpg'" alt="">
           </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Nuno Pires</h6>
+            <img src="img/team/nuno_pires.png" onmouseover="this.src='img/team/nuno_pires.png'" onmouseout="this.src='img/team/nuno_pires.png'" alt="">
+          </div>
+        </div>
+        <div class="column-group gutters">
+          <div class="large-5 hide-medium hide-small">
+            <!-- spacer -->
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Francisco Gonçalves</h6>
+            <img src="img/team/francisco_goncalves.png" onmouseover="this.src='img/team/francisco_goncalves.png'" onmouseout="this.src='img/team/francisco_goncalves.png'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>André Domingues</h6>
+            <img src="img/team/andre_domingues.png" onmouseover="this.src='img/team/andre_domingues.jpg'" onmouseout="this.src='img/team/andre_domingues.png'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Adriana Domingos</h6>
+            <img src="img/team/adriana_domingos.jpg" onmouseover="this.src='img/team/adriana_domingos.jpg'" onmouseout="this.src='img/team/adriana_domingos.jpg'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Diogo Pais</h6>
+            <img src="img/team/diogo_pais.png" onmouseover="this.src='img/team/diogo_pais.png'" onmouseout="this.src='img/team/diogo_pais.png'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Carina Antunes</h6>
+            <img src="img/team/carina_antunes.jpg" onmouseover="this.src='img/team/carina_antunes.jpg'" onmouseout="this.src='img/team/carina_antunes.jpg'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Diogo Lopes</h6>
+            <img src="img/team/diogo_lopes.jpg" onmouseover="this.src='img/team/diogo_lopes.jpg'" onmouseout="this.src='img/team/diogo_lopes.jpg'" alt="">
+          </div>
         </div>
         <div class="column-group gutters">
         </div>
