--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>André Domingues</h6>
-            <img src="img/team/andre_domingues.png" onmouseover="this.src='img/team/andre_domingues.jpg'" onmouseout="this.src='img/team/andre_domingues.png'" alt="">
+            <img src="img/team/andre_domingues.png" onmouseover="this.src='img/team/andre_domingues.png'" onmouseout="this.src='img/team/andre_domingues.png'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Adriana Domingos</h6>
