--- a/index.html
+++ b/index.html
@@ -422,6 +422,19 @@
           </div>
         </div>
         <div class="column-group gutters">
+          <div class="large-5 hide-medium hide-small">
+            <!-- spacer -->
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Yuliya Plotka</h6>
+            <img src="img/team/yuliya_plotka.jpg" onmouseover="this.src='img/team/yuliya_plotka.jpg'" onmouseout="this.src='img/team/yuliya_plotka.jpg'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>João Antunes</h6>
+            <img src="img/team/joao_antunes.jpg" onmouseover="this.src='img/team/joao_antunes.jpg'" onmouseout="this.src='img/team/joao_antunes.jpg'" alt="">
+          </div>
+        </div>
+        <div class="column-group gutters">
         </div>
       </div>
 
