--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Jorge Palma</h6>
-            <img src="img/team/jorge_palma.png" onmouseover="this.src='img/team/jorge_palma_sinfo.png'" onmouseout="this.src='img/team/jorge_palma.png'" alt="">
+            <img src="img/team/jorge_palma.png" onmouseover="this.src='img/team/jorge_palma_sinfo.jpg'" onmouseout="this.src='img/team/jorge_palma.png'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Manuel Alves</h6>
