--- a/index.html
+++ b/index.html
@@ -433,6 +433,10 @@
             <h6>João Antunes</h6>
             <img src="img/team/joao_antunes.jpg" onmouseover="this.src='img/team/joao_antunes.jpg'" onmouseout="this.src='img/team/joao_antunes.jpg'" alt="">
           </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Mafalda Antunes</h6>
+            <img src="img/team/mafalda_antunes.jpg" onmouseover="this.src='img/team/mafalda_antunes.jpg'" onmouseout="this.src='img/team/mafalda_antunes.jpg'" alt="">
+          </div>
         </div>
         <div class="column-group gutters">
         </div>
