--- a/index.html
+++ b/index.html
@@ -312,22 +312,38 @@
           <div class="large-15 medium-30 small-50">
             <h6>Jorge Palma</h6>
             <img src="img/team/jorge_palma.png" onmouseover="this.src='img/team/jorge_palma_sinfo.jpg'" onmouseout="this.src='img/team/jorge_palma.png'" alt="">
+            <br>
+            <a href="https://www.linkedin.com/profile/view?id=164367198" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Manuel Alves</h6>
             <img src="img/team/manuel_alves.jpg" onmouseover="this.src='img/team/manuel_alves_sinfo.jpg'" onmouseout="this.src='img/team/manuel_alves.jpg'" alt="">
+            <br>
+            <a href="http://twitter.com/_manuelalves" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="https://www.linkedin.com/profile/view?id=193501611" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://github.com/manuelalves" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Frederico Carvalho</h6>
             <img src="img/team/frederico_carvalho.jpg" onmouseover="this.src='img/team/frederico_carvalho_sinfo.jpg'" onmouseout="this.src='img/team/frederico_carvalho.jpg'" alt="">
+            <br>
+            <a href="https://www.facebook.com/fredericonc" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="https://www.linkedin.com/pub/frederico-nobre-de-carvalho/59/898/a94" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Cláudia Filipe</h6>
             <img src="img/team/claudia_filipe.png" onmouseover="this.src='img/team/claudia_filipe_sinfo.jpg'" onmouseout="this.src='img/team/claudia_filipe.png'" alt="">
+            <br>
+            <a href="http://facebook.com/claudia.filipe.90" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://twitter.com/claudiasbf" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://pt.linkedin.com/pub/cláudia-beja-filipe/75/b06/1a4/" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://github.com/claudiasb" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Jessica Ribeiro</h6>
             <img src="img/team/jessica_ribeiro.jpg" onmouseover="this.src='img/team/jessica_ribeiro_sinfo.jpg'" onmouseout="this.src='img/team/jessica_ribeiro.jpg'" alt="">
+            <br>
+            <a href="http://twitter.com/jessicafilipar" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Joana Fonseca</h6>
@@ -341,6 +357,9 @@
           <div class="large-15 medium-30 small-50">
             <h6>Mariana Paulo</h6>
             <img src="img/team/mariana_paulo.jpg" onmouseover="this.src='img/team/mariana_paulo_sinfo.jpg'" onmouseout="this.src='img/team/mariana_paulo.jpg'" alt="">
+            <br>
+            <a href="http://facebook.com/marianafpaulo" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://www.linkedin.com/in/marianafpaulo" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Nicolau</h6>
@@ -349,14 +368,25 @@
           <div class="large-15 medium-30 small-50">
             <h6>Francisco Dias</h6>
             <img src="img/team/francisco_dias.jpg" onmouseover="this.src='img/team/francisco_dias_sinfo.jpg'" onmouseout="this.src='img/team/francisco_dias.jpg'" alt="">
+            <br>
+            <a href="https://www.facebook.com/xicombd" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://twitter.com/xicombd" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://linkedin.com/in/xicombd" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://github.com/xicombd" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Gonçalo Sena</h6>
             <img src="img/team/goncalo_sena.jpg" onmouseover="this.src='img/team/goncalo_sena_sinfo.jpg'" onmouseout="this.src='img/team/goncalo_sena.jpg'" alt="">
+            <br>
+            <a href="https://www.facebook.com/goncalosena90" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://twitter.com/goncalosena" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://lnkd.in/VmEatr" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>João Barata</h6>
             <img src="img/team/joao_barata.jpg" onmouseover="this.src='img/team/joao_barata_sinfo.jpg'" onmouseout="this.src='img/team/joao_barata.jpg'" alt="">
+            <br>
+            <a href="http://twitter.com/jmdbo" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Luis Riscado</h6>
@@ -370,7 +400,11 @@
           <div class="large-15 medium-30 small-50">
             <h6>Mike Duarte</h6>
             <img src="img/team/mike_duarte.jpg" onmouseover="this.src='img/team/mike_duarte_sinfo.jpg'" onmouseout="this.src='img/team/mike_duarte.jpg'" alt="">
-          </div>
+            <br>
+            <a href="https://www.facebook.com/mike.duarte.35" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://twitter.com/MikedDuarte" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="https://www.linkedin.com/profile/view?id=293893594" target="_blank"><i class="icon-linkedin"></i></a>
+            </div>
           <div class="large-15 medium-30 small-50">
             <h6>Manuel Piçarra</h6>
             <img src="img/team/manuel_picarra.png" onmouseover="this.src='img/team/manuel_picarra_sinfo.jpg'" onmouseout="this.src='img/team/manuel_picarra.png'" alt="">
@@ -378,18 +412,27 @@
           <div class="large-15 medium-30 small-50">
             <h6>Pedro Saraiva</h6>
             <img src="img/team/pedro_saraiva.jpg" onmouseover="this.src='img/team/pedro_saraiva_sinfo.jpg'" onmouseout="this.src='img/team/pedro_saraiva.jpg'" alt="">
+            <br>
+            <a href="http://twitter.com/PedroGSaraiva" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Rafael Santos</h6>
             <img src="img/team/rafael_santos.jpg" onmouseover="this.src='img/team/rafael_santos_sinfo.jpg'" onmouseout="this.src='img/team/rafael_santos.jpg'" alt="">
+            <br>
+            <a href="http://twitter.com/rafaelhrsantos" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Rodrigo Martins</h6>
             <img src="img/team/rodrigo_martins.jpg" onmouseover="this.src='img/team/rodrigo_martins_sinfo.jpg'" onmouseout="this.src='img/team/rodrigo_martins.jpg'" alt="">
+            <br>
+            <a href="http://twitter.com/RodrigoCFFM" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Nuno Pires</h6>
             <img src="img/team/nuno_pires.png" onmouseover="this.src='img/team/nuno_pires.png'" onmouseout="this.src='img/team/nuno_pires.png'" alt="">
+            <br>
+            <a href="https://www.facebook.com/nuno.pires.182" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="https://www.linkedin.com/pub/nuno-pires/91/176/42" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
         </div>
         <div class="column-group gutters">
@@ -399,6 +442,11 @@
           <div class="large-15 medium-30 small-50">
             <h6>Francisco Gonçalves</h6>
             <img src="img/team/francisco_goncalves.png" onmouseover="this.src='img/team/francisco_goncalves.png'" onmouseout="this.src='img/team/francisco_goncalves.png'" alt="">
+            <br>
+            <a href="http://facebook.com/franciscocgoncalves" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://twitter.com/franciscocsg" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://lnkd.in/b8Bgj-G" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://instagram.com/franciscocsg" target="_blank"><i class="icon-instagram"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>André Domingues</h6>
@@ -411,6 +459,8 @@
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Pais</h6>
             <img src="img/team/diogo_pais.png" onmouseover="this.src='img/team/diogo_pais.png'" onmouseout="this.src='img/team/diogo_pais.png'" alt="">
+            <br>
+            <a href="http://facebook.com/diogo.pais.7165" target="_blank"><i class="icon-facebook"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Carina Antunes</h6>
@@ -428,6 +478,8 @@
           <div class="large-15 medium-30 small-50">
             <h6>Yuliya Plotka</h6>
             <img src="img/team/yuliya_plotka.jpg" onmouseover="this.src='img/team/yuliya_plotka.jpg'" onmouseout="this.src='img/team/yuliya_plotka.jpg'" alt="">
+            <br>
+            <a href="http://twitter.com/juliaplotka" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>João Antunes</h6>
