--- a/index.html
+++ b/index.html
@@ -386,7 +386,10 @@
             <h6>João Barata</h6>
             <img src="img/team/joao_barata.jpg" onmouseover="this.src='img/team/joao_barata_sinfo.jpg'" onmouseout="this.src='img/team/joao_barata.jpg'" alt="">
             <br>
+            <a href="https://www.facebook.com/jmdbo" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/jmdbo" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/jmdbo" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://github.com/jmdbo" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Luis Riscado</h6>
@@ -455,6 +458,8 @@
           <div class="large-15 medium-30 small-50">
             <h6>Adriana Domingos</h6>
             <img src="img/team/adriana_domingos.jpg" onmouseover="this.src='img/team/adriana_domingos.jpg'" onmouseout="this.src='img/team/adriana_domingos.jpg'" alt="">
+            <br>
+            <a href="http://facebook.com/adrianadomingos" target="_blank"><i class="icon-facebook"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Pais</h6>
