--- a/index.html
+++ b/index.html
@@ -489,6 +489,10 @@
           <div class="large-15 medium-30 small-50">
             <h6>João Antunes</h6>
             <img src="img/team/joao_antunes.jpg" onmouseover="this.src='img/team/joao_antunes.jpg'" onmouseout="this.src='img/team/joao_antunes.jpg'" alt="">
+            <br>
+            <a href="https://www.facebook.com/joao.antunes.752" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="https://pt.linkedin.com/in/jgantunes" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="https://github.com/JGAntunes" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Mafalda Antunes</h6>
