--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </nav>
       </div>
 
-      <div class="header kindaParallax" id="header">
+      <div class="header" id="header">
         <div class="opacidade">
           <h1><a href="#" title=""><img src="img/logo.png"></a></h1>
           <div class="description">
