--- a/index.html
+++ b/index.html
@@ -431,11 +431,10 @@
             <a href="http://twitter.com/RodrigoCFFM" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
-            <h6>Nuno Pires</h6>
-            <img src="img/team/nuno_pires.png" onmouseover="this.src='img/team/nuno_pires.png'" onmouseout="this.src='img/team/nuno_pires.png'" alt="">
+            <h6>Adriana Domingos</h6>
+            <img src="img/team/adriana_domingos.jpg" onmouseover="this.src='img/team/adriana_domingos.jpg'" onmouseout="this.src='img/team/adriana_domingos.jpg'" alt="">
             <br>
-            <a href="https://www.facebook.com/nuno.pires.182" target="_blank"><i class="icon-facebook"></i></a>
-            <a href="https://www.linkedin.com/pub/nuno-pires/91/176/42" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://facebook.com/adrianadomingos" target="_blank"><i class="icon-facebook"></i></a>
           </div>
         </div>
         <div class="column-group gutters">
@@ -443,33 +442,29 @@
             <!-- spacer -->
           </div>
           <div class="large-15 medium-30 small-50">
-            <h6>Francisco Gonçalves</h6>
-            <img src="img/team/francisco_goncalves.png" onmouseover="this.src='img/team/francisco_goncalves.png'" onmouseout="this.src='img/team/francisco_goncalves.png'" alt="">
+            <h6>Carina Antunes</h6>
+            <img src="img/team/carina_antunes.jpg" onmouseover="this.src='img/team/carina_antunes.jpg'" onmouseout="this.src='img/team/carina_antunes.jpg'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Mafalda Antunes</h6>
+            <img src="img/team/mafalda_antunes.jpg" onmouseover="this.src='img/team/mafalda_antunes.jpg'" onmouseout="this.src='img/team/mafalda_antunes.jpg'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Mafalda Magro</h6>
+            <img src="img/team/mafalda_magro.jpg" onmouseover="this.src='img/team/mafalda_magro.jpg'" onmouseout="this.src='img/team/mafalda_magro.jpg'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Yuliya Plotka</h6>
+            <img src="img/team/yuliya_plotka.jpg" onmouseover="this.src='img/team/yuliya_plotka.jpg'" onmouseout="this.src='img/team/yuliya_plotka.jpg'" alt="">
             <br>
-            <a href="http://facebook.com/franciscocgoncalves" target="_blank"><i class="icon-facebook"></i></a>
-            <a href="http://twitter.com/franciscocsg" target="_blank"><i class="icon-twitter"></i></a>
-            <a href="http://lnkd.in/b8Bgj-G" target="_blank"><i class="icon-linkedin"></i></a>
-            <a href="http://instagram.com/franciscocsg" target="_blank"><i class="icon-instagram"></i></a>
+            <a href="http://twitter.com/juliaplotka" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>André Domingues</h6>
             <img src="img/team/andre_domingues.png" onmouseover="this.src='img/team/andre_domingues.png'" onmouseout="this.src='img/team/andre_domingues.png'" alt="">
-          </div>
-          <div class="large-15 medium-30 small-50">
-            <h6>Adriana Domingos</h6>
-            <img src="img/team/adriana_domingos.jpg" onmouseover="this.src='img/team/adriana_domingos.jpg'" onmouseout="this.src='img/team/adriana_domingos.jpg'" alt="">
             <br>
-            <a href="http://facebook.com/adrianadomingos" target="_blank"><i class="icon-facebook"></i></a>
-          </div>
-          <div class="large-15 medium-30 small-50">
-            <h6>Diogo Pais</h6>
-            <img src="img/team/diogo_pais.png" onmouseover="this.src='img/team/diogo_pais.png'" onmouseout="this.src='img/team/diogo_pais.png'" alt="">
-            <br>
-            <a href="http://facebook.com/diogo.pais.7165" target="_blank"><i class="icon-facebook"></i></a>
-          </div>
-          <div class="large-15 medium-30 small-50">
-            <h6>Carina Antunes</h6>
-            <img src="img/team/carina_antunes.jpg" onmouseover="this.src='img/team/carina_antunes.jpg'" onmouseout="this.src='img/team/carina_antunes.jpg'" alt="">
+            <a href="http://facebook.com/voxivoid" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://instagram.com/voxivoid" target="_blank"><i class="icon-instagram"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Lopes</h6>
@@ -481,10 +476,19 @@
             <!-- spacer -->
           </div>
           <div class="large-15 medium-30 small-50">
-            <h6>Yuliya Plotka</h6>
-            <img src="img/team/yuliya_plotka.jpg" onmouseover="this.src='img/team/yuliya_plotka.jpg'" onmouseout="this.src='img/team/yuliya_plotka.jpg'" alt="">
+            <h6>Diogo Pais</h6>
+            <img src="img/team/diogo_pais.png" onmouseover="this.src='img/team/diogo_pais.png'" onmouseout="this.src='img/team/diogo_pais.png'" alt="">
             <br>
-            <a href="http://twitter.com/juliaplotka" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://facebook.com/diogo.pais.7165" target="_blank"><i class="icon-facebook"></i></a>
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Francisco Gonçalves</h6>
+            <img src="img/team/francisco_goncalves.png" onmouseover="this.src='img/team/francisco_goncalves.png'" onmouseout="this.src='img/team/francisco_goncalves.png'" alt="">
+            <br>
+            <a href="http://facebook.com/franciscocgoncalves" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="http://twitter.com/franciscocsg" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://lnkd.in/b8Bgj-G" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://instagram.com/franciscocsg" target="_blank"><i class="icon-instagram"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>João Antunes</h6>
@@ -495,8 +499,15 @@
             <a href="https://github.com/JGAntunes" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
-            <h6>Mafalda Antunes</h6>
-            <img src="img/team/mafalda_antunes.jpg" onmouseover="this.src='img/team/mafalda_antunes.jpg'" onmouseout="this.src='img/team/mafalda_antunes.jpg'" alt="">
+            <h6>Nuno Pires</h6>
+            <img src="img/team/nuno_pires.png" onmouseover="this.src='img/team/nuno_pires.png'" onmouseout="this.src='img/team/nuno_pires.png'" alt="">
+            <br>
+            <a href="https://www.facebook.com/nuno.pires.182" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="https://www.linkedin.com/pub/nuno-pires/91/176/42" target="_blank"><i class="icon-linkedin"></i></a>
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Tiago Ramos</h6>
+            <img src="img/team/tiago_ramos.png" onmouseover="this.src='img/team/tiago_ramos.png'" onmouseout="this.src='img/team/tiago_ramos.png'" alt="">
           </div>
         </div>
         <div class="column-group gutters">
