--- a/index.html
+++ b/index.html
@@ -416,13 +416,18 @@
             <h6>Pedro Saraiva</h6>
             <img src="img/team/pedro_saraiva.jpg" onmouseover="this.src='img/team/pedro_saraiva_sinfo.jpg'" onmouseout="this.src='img/team/pedro_saraiva.jpg'" alt="">
             <br>
+            <a href="https://www.facebook.com/pedrogsaraiva" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/PedroGSaraiva" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="https://pt.linkedin.com/in/pedrogsaraiva/ " target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://github.com/Pedrovsky" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Rafael Santos</h6>
             <img src="img/team/rafael_santos.jpg" onmouseover="this.src='img/team/rafael_santos_sinfo.jpg'" onmouseout="this.src='img/team/rafael_santos.jpg'" alt="">
             <br>
             <a href="http://twitter.com/rafaelhrsantos" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://pt.linkedin.com/pub/rafael-santos/58/84b/494/" target="_blank"><i class="icon-linkedin"></i></a>
+            <a href="http://github.com/rafaelhrsantos" target="_blank"><i class="icon-github"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Rodrigo Martins</h6>
@@ -497,6 +502,14 @@
             <a href="https://www.facebook.com/joao.antunes.752" target="_blank"><i class="icon-facebook"></i></a>
             <a href="https://pt.linkedin.com/in/jgantunes" target="_blank"><i class="icon-linkedin"></i></a>
             <a href="https://github.com/JGAntunes" target="_blank"><i class="icon-github"></i></a>
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>João Chitas</h6>
+            <img src="img/team/joao_chitas.jpg" onmouseover="this.src='img/team/joao_chitas.jpg'" onmouseout="this.src='img/team/joao_chitas.jpg'" alt="">
+            <br>
+            <a href="https://www.facebook.com/joaopachitas" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="https://twitter.com/O_Tretas" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="http://pt.linkedin.com/in/joaopachitas" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Nuno Pires</h6>
