--- a/index.html
+++ b/index.html
@@ -449,6 +449,9 @@
           <div class="large-15 medium-30 small-50">
             <h6>Carina Antunes</h6>
             <img src="img/team/carina_antunes.jpg" onmouseover="this.src='img/team/carina_antunes.jpg'" onmouseout="this.src='img/team/carina_antunes.jpg'" alt="">
+            <br>
+            <a href="https://www.facebook.com/carinadeoliveiraantunes" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="https://pt.linkedin.com/in/carinadeoliveiraantunes  " target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Mafalda Antunes</h6>
