--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
             <p><b>Rob Bishop</b> - <i>"I think this is the best lineup I've ever seen!"</i></p>
             <p><b>Ray Muzyka</b> - <i>"It’s amazing what you have done without any university funding!"</i></p>
             <p><b>Afonso Salcedo</b>- <i>"Congratulations for the conference, you're really doing an amazing job and you should be proud. You Rock!"</i></p>
+            <p><b>Adam DuVander</b>- <i>"The energy and interest from the attendees of SINFO has to be my favorite part of the event. With that kind of atmosphere, optimism is contagious. What a perfect setting for technical creativity."</i></p>
           </div>
           <div class="large-50 medium-50 small-100 justify-text">
             <h3>Size</h3>
